--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
                       </div>
                       <div class="card-footer text-body-secondary">
                         <div class="row justify-content-end">                         
-                          <button type="button" class="btn btn-secondary col-1 m-1">Cerrar</button>
-                          <button type="submit" class="btn btn-primary col-1 m-1 me-3">Enviar</button>
+                          <button type="button" class="btn btn-secondary col-12 col-md-3 col-xl-2 m-1">Cerrar</button>
+                          <button type="submit" class="btn btn-primary col-12 col-md-3 col-xl-2 m-1">Enviar</button>
                         </div>
                         
                       </div>
